# saga-realworld

./: .gitignore  Cargo.toml
realworld-balance/: .env  Cargo.toml
realworld-balance/src/: main.rs
realworld-balance/src/adapters/: mod.rs
realworld-balance/src/adapters/cockroachdb/: cockroach_adapter.rs  mod.rs
realworld-balance/src/adapters/kafka/: kafka_adapter.rs
realworld-balance/src/application/: error_msgs.rs  mod.rs  transaction_service.rs  transference_service.rs
realworld-balance/src/application/domain/: accounts.rs
realworld-balance/src/application/ports/: mod.rs
realworld-balance/src/application/ports/port_in/: mod.rs  transaction_consumer.rs  transference_consumer.rs
realworld-balance/src/application/ports/port_out/: mod.rs  transaction_store.rs  transference_store.rs
realworld-shared/: Cargo.toml
realworld-shared/src/: lib.rs
